[package]
name = "fbleau"
version = "0.3.1"
license = "MIT"
authors = ["Giovanni Cherubin <g.chers@gmail.com>"]
description = "A tool for measuring black-box security via Machine Learning"
repository = "https://github.com/gchers/fbleau"
exclude = [
    "examples/*"
]

[lib]
name = "fbleau"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fbleau"
path = "src/main.rs"

[features]
# If enabled, it produces a Python module.
python-module = ["pyo3", "numpy"]

[dependencies]
docopt = "1"
itertools = "0.7.8"
serde = { version = "1.0.70", features = ["derive"] }
csv = "1.0.0"
ordered-float = "0.5.0"
float-cmp = "0.5.2"
strsim = "0.9.1"
ndarray = "0.13.0"
pyo3 = { version = "0.8.2", features = ["extension-module"], optional = true }
numpy = { version = "0.7.0", optional = true }

[dev-dependencies]
rustlearn = "0.5.0"
bencher = "0.1.5"

[[bench]]
name = "knn"
harness = false
