[package]
name = "fbleau"
version = "0.3.2"
license = "MIT"
authors = ["Giovanni Cherubin <g.chers@gmail.com>"]
description = "A tool for measuring black-box security via Machine Learning"
repository = "https://github.com/gchers/fbleau"
exclude = [
    "examples/*"
]
edition = "2018"

[lib]
name = "fbleau"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fbleau"
path = "src/main.rs"

[features]
# If enabled, it produces a Python module.
python-module = ["pyo3", "numpy"]

[dependencies]
docopt = "1"
itertools = "0.10.0"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
ordered-float = "2.0"
float-cmp = "0.8"
strsim = "0.10.0"
ndarray = "0.15"
pyo3 = { version = "0.13.2", features = ["extension-module"], optional = true }
numpy = { version = "0.13", optional = true }

[dev-dependencies]
rustlearn = "0.5.0"
bencher = "0.1.5"

[[bench]]
name = "knn"
harness = false
